--- a/src/patternfly/demos/Masthead/masthead-template.hbs
+++ b/src/patternfly/demos/Masthead/masthead-template.hbs
@@ -11,7 +11,9 @@
     {{> masthead-toggle}}
   {{/unless}}
   {{#> masthead-main}}
-    {{> masthead-brand masthead-brand--attribute='style="--pf-v5-c-brand--Height: 36px;"'}}
+    {{#> masthead-brand}}
+      {{> brand brand--attribute='src="/assets/images/pf-logo.svg" alt="PatternFly logo" style="--pf-v5-c-brand--Height:36px"'}}
+    {{/masthead-brand}}
   {{/masthead-main}}
   {{> masthead-template-content}}
 {{/masthead}}
