--- a/src/patternfly/components/MenuToggle/menu-toggle-toggle-icon.hbs
+++ b/src/patternfly/components/MenuToggle/menu-toggle-toggle-icon.hbs
@@ -2,5 +2,5 @@
   {{#if menu-toggle-toggle-icon--attribute}}
     {{{menu-toggle-toggle-icon--attribute}}}
   {{/if}}>
-  <i class="fas fa-angle-down" aria-hidden="true"></i>
+  <i class="fas fa-caret-down" aria-hidden="true"></i>
 </span>
