--- a/src/patternfly/demos/NotificationDrawer/notification-drawer-template.hbs
+++ b/src/patternfly/demos/NotificationDrawer/notification-drawer-template.hbs
@@ -12,7 +12,7 @@
     {{#> drawer}}
       {{#> drawer-main}}
         {{#> drawer-content}}
-          {{#> page-main}} // TODO should this be a page-main-list so there is not a duplicate main tag?
+          {{#> page-main}}
             {{> page-template-breadcrumb}}
             {{> page-template-title}}
             {{> page-template-gallery}}
