--- a/src/patternfly/components/AboutModalBox/about-modal-box.hbs
+++ b/src/patternfly/components/AboutModalBox/about-modal-box.hbs
@@ -1,5 +1,5 @@
 <div class="{{pfv}}about-modal-box{{#if about-modal-box--modifier}} {{about-modal-box--modifier}}{{/if}}"
-  style="--{{pfv}}about-modal-box--BackgroundImage: {{ternary about-modal-box--background-image about-modal-box--background-image "url(/assets/images/pfbg-icon.svg)"}}"
+  style="--{{pfv}}about-modal-box--BackgroundImage: {{ternary about-modal-box--background-image about-modal-box--background-image "url(/assets/images/PF-Backdrop.png)"}}"
   {{#if about-modal-box--attribute}}
     {{{about-modal-box--attribute}}}
   {{/if}}>
